--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,9 @@ version: '3.8'
 name: valorant-student-tracker
 services:
   backend:
-    image: student-tracker-backend
+    build: .
+    volumes:
+      - .:/app
     ports:
       - 3000:5000
     configs:
